--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,15 @@ textarea {
    ========================================================================== */
 
 
+*{
+    margin: 0;
+    padding: 0;
+}
 
-
-
+body{
+    line-height: 100vh;
+    text-align: center;
+}
 
 
 
