--- a/css/main.css
+++ b/css/main.css
@@ -63,9 +63,13 @@ textarea {
 }
 
 body{
-    line-height: 100vh;
+    line-height: calc(100vh - 40px);
+    border: 20px solid #222;
+    box-sizing: border-box;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 26px;   
     text-align: center;
-}
+    transition: all 2s }
 
 audio{
     border: 0;
