--- a/SoundDeck/css/main.css
+++ b/SoundDeck/css/main.css
@@ -105,17 +105,20 @@ nav{
 
 
 .column {
-  background-color:white;
-  width:31vw;
+  width:33vw;
   min-width: 400px;
   max-width: 700px;
   display: inline-block;
   transition: 300ms;
-  margin:20px  0 0 20px;
+  margin:20px  0 0 40px;
   overflow:hidden;
   position:relative;
-    height: calc(100% - 40px);
+    height: calc(100% - 20px);
     box-sizing: border-box;
+}
+
+.column:first-child{
+  margin-left: 20px;
 }
 
 .column:last-child{
@@ -139,10 +142,12 @@ nav{
     height: 50px;
     position: absolute;
     top: 50%;
+    left: 20px;
     background-position: center center;
     background-size: cover;
     transform: translateY(-50%);
     margin: 0;
+    border-radius: 50px;
 }
 
 .user_information{
@@ -151,7 +156,7 @@ nav{
   transform: translateY(-45%);
   left: 0;
   width: 100%;
-  padding-left: 70px;
+  padding-left: 80px;
   box-sizing: border-box;
   color: #fff;
 }
@@ -179,6 +184,8 @@ nav{
   overflow: hidden;
   white-space: normal;
   cursor: pointer;
+  background-color: white;
+  margin-top: 10px;
 }
 
 .track p{
@@ -296,6 +303,7 @@ nav{
   width: 100vw;
   height: 70px;
   background-color: #fff;
+  border-top: 1px solid #F1F2F4;
   position: absolute;
   bottom: 0;
   left: 0;
