--- a/SoundDeck/css/main.css
+++ b/SoundDeck/css/main.css
@@ -188,6 +188,10 @@ nav{
   margin-top: 10px;
 }
 
+.track:last-child{
+  margin-bottom: 20px;
+}
+
 .track p{
   margin: 0;
   font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Garuda,Verdana,Tahoma,sans-serif;
@@ -289,8 +293,7 @@ nav{
   opacity: 0;
   transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);
   transform: translateY(100px);
-  filter: brightness(200%);
-  -webkit-filter: brightness(200%);
+
 }
 
 .track:hover .track_wave {
