--- a/SoundDeck/css/main.css
+++ b/SoundDeck/css/main.css
@@ -491,6 +491,16 @@ nav {
   opacity: .3;
 }
 
+.track_msg p{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: .6;
+  text-align: center;
+  width: 80%;
+}
+
 
 
 /* ==========================================================================
