--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -1,8 +1,9 @@
-a,
-.link {
-  display: inline-block;
-    color: $color-gray;
+a, .link {
+    display: inline-block;
+
     white-space: nowrap;
+
+    color: $color-gray;
     &:hover {
         text-decoration: none;
     }
@@ -13,80 +14,98 @@ a,
     text-decoration: underline;
 }
 
-p .link, p a{
-  color: $color-black;
+p .link, p a {
+    color: $color-black;
 }
 
 
 .favicon {
     display: inline-block;
+
     width: 1em;
     height: 1em;
     margin-right: .2em;
+
     content: '';
-    transform: translate(0em, .17em) scale(0.9);
+    transform: translate(0em, .17em) scale(.9);
 
     background-size: contain;
 }
 
 a[href*='9to5google'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/9to5google.png');
+
+        @extend .favicon;
+    }
+}
+
+a[href*='reddit'] {
+    &:before {
+        background-image: url('../static/favicons/reddit.png');
+
+        @extend .favicon;
     }
 }
 
 a[href*='news.ycombinator'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/hackernews.png');
+
+        @extend .favicon;
     }
 }
 
 a[href*='feber'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/feber.png');
+
+        @extend .favicon;
     }
 }
 
 a[href*='gizmodo'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/gizmodo.png');
+
+        @extend .favicon;
     }
 }
 a[href*='motherboard'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/motherboard.png');
+
+        @extend .favicon;
     }
 }
 a[href*='producthunt'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/producthunt.svg');
+
+        @extend .favicon;
     }
 }
 
 a[href*='inspiring.online'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/inspiringonline.jpg');
+
+        @extend .favicon;
     }
 }
 
 a[href*='softpedia'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/softpedia.png');
+
+        @extend .favicon;
     }
 }
 
 a[href*='webaudioweekly'] {
     &:before {
-        @extend .favicon;
         background-image: url('../static/favicons/webaudio.jpg');
+
+        @extend .favicon;
     }
 }
-
