--- a/src/scss/sections/_project.scss
+++ b/src/scss/sections/_project.scss
@@ -1,12 +1,12 @@
-
 .project {
     &:not(:first-child) {
         margin-top: $spacing-xl;
     }
     .preview {
+        position: relative;
+
         width: 100%;
         min-height: 200px;
-        position: relative;
         margin-top: $spacing-m;
         //background-color: lightgray;
 
@@ -17,31 +17,36 @@
             width: 100%;
         }
     }
-
     .description {
         margin: $spacing-m 0;
+    }
+    .notice {
+        color: $color-danger;
     }
     .links {
         li {
             display: inline-block;
-            margin-bottom: .6em;
+
             margin-right: .2em;
+            margin-bottom: .6em;
         }
     }
 }
 
 .project img {
     width: 100%;
-    &.mobile{
-        background-color: lightgray;
+
+    &.mobile {
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        height: 100%;
+
         width: 100%;
-        object-fit: cover;
+        height: 100%;
+
+        background-color: lightgray;
     }
 }
 
@@ -54,12 +59,24 @@
 
 
 
-.facepause {
-    video {
-        display: block;
-        position: relative;
+.friskvardsbidrag {
+    img {
         width: 100%;
-        //box-shadow: $shadow;
+
+        box-shadow: $shadow;
+    }
+}
+
+
+.project {
+    video {
+        position: relative;
+
+        display: block;
+
+        width: 100%;
+
+        background-color: $color-gray;
     }
 }
 
@@ -77,7 +94,10 @@
             height: calc(1000px * 9/16);
         }
     }
-    video,  {
+    .mobile img {
+        object-fit: cover;
+    }
+    video {
         position: absolute;
         top: 50%;
         left: 50%;
