notice added & copy updates

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -8,6 +8,7 @@ $color-gray: #b9b9b9;
 $color-bege: #eee6b6;
 $color-black: #000;
 $color-danger: #920031;
+$color-warning: #b07900;
 // Shaodws
 $shadow: 0 2px 70px 0 rgba(34, 49, 102, .1);
 $spacing-xl: 7rem;
