--- a/src/scss/sections/_project.scss
+++ b/src/scss/sections/_project.scss
@@ -7,7 +7,7 @@
 
         width: 100%;
         margin-top: $spacing-m;
-        //background-color: lightgray;
+
         &.__inner {
             width: 100%;
         }
@@ -34,76 +34,134 @@
         color: $color-warning;
         background-color: rgb(234 161 0 / 30%);
     }
-}
-
-.project img {
-    display: block;
-
-    width: 100%;
-}
-
-.dmwtf {
     img {
-        border-radius: 1vw;
-        box-shadow: $shadow;
-    }
-}
+        display: block;
 
-
-
-.friskvardsbidrag {
-    img {
         width: 100%;
 
-        box-shadow: $shadow;
+        object-fit: cover;
+        &.mobile {
+            width: 100%;
+            height: 100%;
+
+            background-color: lightgray;
+        }
     }
-}
-
-
-.project {
     video {
         position: relative;
 
         display: block;
 
         width: 100%;
-        height: 100%;
 
-        background-color: $color-gray;
+        object-fit: cover;
     }
 }
 
+.preview img {
+    //opacity: 0;
+}
+
+.preview:after {
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+
+    content: 'loading...';
+    transform: translate(-50%, -50%);
+
+    color: $color-gray;
+    background-color: rgba($color-gray, .2);
+}
+
+
+
+.dmwtf {
+    .preview {
+        &:after {
+            background-color: transparent;
+        }
+    }
+    img {
+        border-radius: 1vw;
+        box-shadow: $shadow;
+
+        aspect-ratio: (1005 /617);
+    }
+}
+
+.systembolaget {
+    img {
+        aspect-ratio: (2 /1);
+    }
+}
+
+.facepause {
+    video {
+        aspect-ratio: (1000 / 575);
+    }
+}
+
+.friskvardsbidrag {
+    img {
+        box-shadow: $shadow;
+
+        aspect-ratio: (2000 / 1047);
+    }
+}
+
+.palladio {
+    img {
+        aspect-ratio: (1000 /498);
+    }
+}
+
+.springsteen {
+    video {
+        aspect-ratio: (1000 /537);
+    }
+}
+
+.quickpreview {
+    img {
+        aspect-ratio: (1000 / 507);
+    }
+}
+
+
 .freeze {
     position: relative;
+    .preview:after {
+        display: none;
+    }
     .window {
         position: relative;
 
         overflow: hidden;
 
         width: 100%;
-        height: calc(100vw * 9/16);
 
-        @include respond-to('medium') {
-            height: calc(1000px * 9/16);
-        }
+        aspect-ratio: (16 / 9);
     }
-    .mobile img {
+    img.mobile {
         object-fit: cover;
     }
     video {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-
-        width: auto;
+        width: 100%;
         min-width: 100%;
-        min-height: calc(100vw * 9/16);
 
-        transform: translate(-50%, -50%);
+        background-color: rgba($color-gray, .2);
 
-        @include respond-to('medium') {
-            min-height: calc(1000px * 9/16);
-        }
+        object-fit: cover;
+        aspect-ratio: (16 / 9);
     }
     span.link {
         color: $color-black;
@@ -127,7 +185,6 @@
 
         color: white;
         border-radius: .3vmax;
-        //border: 0.8vw solid white;
         box-shadow: 0 0 0 .8vmax #fff;
     }
 }
